test/sema/parameter-shadows-member-function-ambiguous.delta
// RUN: %check_errors %not %delta -typecheck %s

struct S {
    void bar() {}
    void foo(void() bar) {
        // CHECK: [[@LINE+1]]:9: error: ambiguous reference to 'bar'
        bar();
    }
}

void main() {
    var s = S();
}
